found yet another issue with the about and profile sections being too close

--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ a:hover {
 /* SECTIONS */
 
 section {
-  padding-top: 4vh;
+  padding-top: 10vh;
   height: 96vh;
   margin: 0 10rem;
   /* box-sizing: border-box; */
